--- a/FoldingVideoPlusTrivia/app/src/main/res/values/strings.xml
+++ b/FoldingVideoPlusTrivia/app/src/main/res/values/strings.xml
@@ -4,7 +4,11 @@
     <string name="fun_fact">Fun fact:</string>
     <string name="cast_members">Cast members:</string>
     <string name="soundtrack">Soundtrack:</string>
+
+    <!-- Fun fact info -->
     <string name="imdb_fact">This movie is well known for being an open-source film under the Creative Commons Attribution 3.0 license, which gave the right to people to use and share the Big Buck Bunny short film to anyone and anywhere.</string>
-    <string name="imdb_sound_designer">Jan Morgenstern</string>
-    <string name="imdb_sound_mixer">Danny van Spreuwel</string>
+
+    <!-- Soundtrack info -->
+    <string name="soundtrack_info">Jan Morgenstern (Germany) was responsible for the music and sound design of this short film. His credits include sound effects, foley design, audio mixing and post-production.</string>
+    <string name="jan_content_des">Picture of Jan Morgenstern</string>
 </resources>
